syntax = "proto3";

package charts;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "schema/market_side.proto";

option go_package = "github.com/joeycumines-swyftx/charts-usage-stats/schema";

message ApiEvent {
  oneof data {
    ApiAccessLog access_log = 6;
  }
}

message ApiAccessLog {
  // note we are using https://expressjs.com/en/resources/middleware/morgan.html#tiny

  int32 status_code = 1;
  int64 content_length = 2;
  google.protobuf.Duration duration = 3;

  oneof data {
    GetBars get_bars = 7;
    LastKnownPrice last_known_price = 8;
    Rate rate = 9;
  }

  message GetBars {
    string primary_asset = 1;
    string secondary_asset = 2;
    MarketSide market_side = 3;
    google.protobuf.Timestamp start_time = 4;
    google.protobuf.Timestamp end_time = 5;
    google.protobuf.Duration resolution = 6;
  }

  message LastKnownPrice {
    string primary_asset = 1;
    string secondary_asset = 2;
  }

  message Rate {
    string primary_asset = 1;
    string secondary_asset = 2;
    google.protobuf.Timestamp timestamp = 3;
  }
}
